Migrate URLs from Netlify to GitHub Pages

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arondell Home — Clean Living Essentials, Honest Reviews</title>
     <meta name="description" content="Honest reviews of water filters, kitchen gadgets, and home essentials. Find the best products for clean, simple living.">
-    <link rel="canonical" href="https://arondellhome.netlify.app">
+    <link rel="canonical" href="https://arondell-home.github.io/arondell-home">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { font-family: 'Georgia', serif; color: #2d2d2d; line-height: 1.8; background: #fafaf8; }
