--- a/privacy.html
+++ b/privacy.html
@@ -9,7 +9,7 @@
 <body>
 <h1>Privacy Policy</h1>
 <p><strong>Last updated:</strong> February 10, 2026</p>
-<p>Arondell Home ("we", "us") operates the website arondell-home.netlify.app. This page informs you of our policies regarding the collection, use, and disclosure of personal information.</p>
+<p>Arondell Home ("we", "us") operates the website arondell-home.github.io/arondell-home. This page informs you of our policies regarding the collection, use, and disclosure of personal information.</p>
 <h2>Information Collection</h2>
 <p>We do not collect personal information directly. Our site may use third-party services (such as Amazon Associates) that use cookies to track referrals. We do not have access to or control over these cookies.</p>
 <h2>Amazon Associates</h2>
